[MPIR-323] Align Mojo class names, goals and output names

--- a/src/it/MPIR-242/pom.xml
+++ b/src/it/MPIR-242/pom.xml
@@ -65,7 +65,7 @@
         <reportSets>
           <reportSet>
             <reports>
-              <report>license</report>
+              <report>licenses</report>
             </reports>
           </reportSet>
         </reportSets>
