add plugin excludes feature for plugin-management report Added pluginManagementExcludes list parameter.

--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,7 @@ under the License.
     </contributor>
     <contributor>
       <name>Gabriel Belingueres</name>
+      <email>belingueres@gmail.com</email>
     </contributor>
     <contributor>
       <name>Simon Wang</name>
