--- a/src/main/resources/project-info-reports.properties
+++ b/src/main/resources/project-info-reports.properties
@@ -127,7 +127,7 @@ report.dependency-convergence.stats.modules                        = Number of m
 report.dependency-convergence.title                                = Dependency Convergence
 report.dependency-info.name                                        = Dependency Information
 report.dependency-info.title                                       = Dependency Information
-report.dependency-info.description                                 = This document describes how to to include this project as a dependency using various dependency management tools.
+report.dependency-info.description                                 = This document describes how to include this project as a dependency using various dependency management tools.
 report.index.nodescription                                         = There is currently no description associated with this project.
 report.index.title                                                 = About
 report.issue-management.bugzilla.intro                             = This project uses {Bugzilla, http://www.bugzilla.org/}.
