--- a/src/main/resources/project-info-reports.properties
+++ b/src/main/resources/project-info-reports.properties
@@ -21,7 +21,7 @@ report.ci-management.bamboo.intro                                  = This projec
 report.ci-management.buildforge.intro                              = This project uses {Build Forge, http://www-306.ibm.com/software/awdtools/buildforge/enterprise/}.
 report.ci-management.continuum.intro                               = This project uses {Continuum, http://continuum.apache.org/}.
 report.ci-management.cruisecontrol.intro                           = This project uses {CruiseControl, http://cruisecontrol.sourceforge.net/}.
-report.ci-management.description                                   = This is a link to the definitions of all continuous integration processes that builds and tests code on a frequent, regular basis.
+report.ci-management.description                                   = This document lists the continuous integration management system of this project for building and testing code on a frequent, regular basis.
 report.ci-management.general.intro                                 = This project uses Continuous Integration System.
 report.ci-management.hudson.intro                                  = This project uses {Hudson, http://hudson-ci.org/}.
 report.ci-management.jenkins.intro                                 = This project uses {Jenkins, http://jenkins-ci.org/}.
@@ -127,7 +127,7 @@ report.dependency-convergence.stats.modules                        = Number of m
 report.dependency-convergence.title                                = Dependency Convergence
 report.dependency-info.name                                        = Dependency Information
 report.dependency-info.title                                       = Dependency Information
-report.dependency-info.description                                 = This document describes how to to include this project as a dependency using various dependency management tools.
+report.dependency-info.description                                 = This document describes how to include this project as a dependency using various dependency management tools.
 report.index.nodescription                                         = There is currently no description associated with this project.
 report.index.title                                                 = About
 report.issue-management.bugzilla.intro                             = This project uses {Bugzilla, http://www.bugzilla.org/}.
