--- a/pom.xml
+++ b/pom.xml
@@ -391,7 +391,7 @@ under the License.
       <groupId>org.apache.maven.wagon</groupId>
       <artifactId>wagon-http-lightweight</artifactId>
       <version>3.1.0</version>
-      <scope>runtime</scope>
+      <scope>test</scope>
     </dependency>
 
     <!-- Anything else -->
