--- a/pom.xml
+++ b/pom.xml
@@ -209,7 +209,7 @@ under the License.
     <dependency>
       <groupId>org.apache.maven.shared</groupId>
       <artifactId>maven-common-artifact-filters</artifactId>
-      <version>3.0.1</version>
+      <version>3.1.0</version>
     </dependency>
     <dependency>
       <groupId>org.apache.maven.shared</groupId>
@@ -338,19 +338,19 @@ under the License.
     <dependency>
       <groupId>org.codehaus.plexus</groupId>
       <artifactId>plexus-utils</artifactId>
-      <version>3.1.0</version>
+      <version>3.3.0</version>
     </dependency>
     <dependency>
       <groupId>org.codehaus.plexus</groupId>
       <artifactId>plexus-interpolation</artifactId>
-      <version>1.25</version>
+      <version>1.26</version>
     </dependency>
 
     <!-- Test -->
     <dependency>
-      <groupId>httpunit</groupId>
+      <groupId>org.httpunit</groupId>
       <artifactId>httpunit</artifactId>
-      <version>1.6.1</version>
+      <version>1.7.3</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -386,7 +386,7 @@ under the License.
     <dependency>
       <groupId>org.apache.maven.wagon</groupId>
       <artifactId>wagon-http-lightweight</artifactId>
-      <version>3.1.0</version>
+      <version>3.3.4</version>
       <scope>test</scope>
     </dependency>
 
