--- a/src/main/resources/project-info-reports.properties
+++ b/src/main/resources/project-info-reports.properties
@@ -24,7 +24,7 @@ report.ci-management.cruisecontrol.intro                           = This projec
 report.ci-management.description                                   = This document lists the continuous integration management system of this project for building and testing code on a frequent, regular basis.
 report.ci-management.general.intro                                 = This project uses Continuous Integration System.
 report.ci-management.hudson.intro                                  = This project uses {Hudson, http://hudson-ci.org/}.
-report.ci-management.jenkins.intro                                 = This project uses {Jenkins, http://jenkins-ci.org/}.
+report.ci-management.jenkins.intro                                 = This project uses {Jenkins, https://www.jenkins.io/}.
 report.ci-management.luntbuild.intro                               = This project uses {Luntbuild, http://luntbuild.javaforge.com/}.
 report.ci-management.travis.intro                                  = This project uses {Travis CI, https://travis-ci.org/}.
 report.ci-management.name                                          = CI Management
