--- a/pom.xml
+++ b/pom.xml
@@ -186,6 +186,11 @@ under the License.
     </dependency>
     <dependency>
       <groupId>org.apache.maven.shared</groupId>
+      <artifactId>maven-shared-utils</artifactId>
+      <version>3.3.3</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.maven.shared</groupId>
       <artifactId>maven-shared-jar</artifactId>
       <version>1.2</version>
       <exclusions><!-- Replace problematic BCEL version until MSHARED JAR has been updated -->
