[MPIR-391] Continuous Integration support for GitHub Actions
This closes #27

--- a/src/main/resources/project-info-reports.properties
+++ b/src/main/resources/project-info-reports.properties
@@ -23,6 +23,7 @@ report.ci-management.continuum.intro                               = This projec
 report.ci-management.cruisecontrol.intro                           = This project uses {CruiseControl, http://cruisecontrol.sourceforge.net/}.
 report.ci-management.description                                   = This document lists the continuous integration management system of this project for building and testing code on a frequent, regular basis.
 report.ci-management.general.intro                                 = This project uses Continuous Integration System.
+report.ci-management.github.intro                                  = This project uses {GitHub Actions, https://github.com/features/actions/}.
 report.ci-management.hudson.intro                                  = This project uses {Hudson, http://hudson-ci.org/}.
 report.ci-management.jenkins.intro                                 = This project uses {Jenkins, https://www.jenkins.io/}.
 report.ci-management.luntbuild.intro                               = This project uses {Luntbuild, http://luntbuild.javaforge.com/}.
