Replace usage of deprecated expressions

--- a/src/it/MPIR-375/pom.xml
+++ b/src/it/MPIR-375/pom.xml
@@ -92,7 +92,7 @@
       </plugin>
       <plugin>
         <artifactId>maven-project-info-reports-plugin</artifactId>
-        <version>@pom.version@</version>
+        <version>@project.version@</version>
         <configuration>
           <pluginManagementExcludes>
             <pluginManagementExclude>org.eclipse.m2e:lifecycle-mapping</pluginManagementExclude>
@@ -106,7 +106,7 @@
     <plugins>
       <plugin>
         <artifactId>maven-project-info-reports-plugin</artifactId>
-        <version>@pom.version@</version>
+        <version>@project.version@</version>
         <reportSets>
           <reportSet>
             <reports>
