--- a/src/it/MPIR-242/pom.xml
+++ b/src/it/MPIR-242/pom.xml
@@ -58,7 +58,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-project-info-reports-plugin</artifactId>
-        <version>@pom.version@</version>
+        <version>@project.version@</version>
         <configuration>
           <licenseFileEncoding>ISO-8859-5</licenseFileEncoding>
         </configuration>
