--- a/src/it/MPIR-300/pom.xml
+++ b/src/it/MPIR-300/pom.xml
@@ -81,7 +81,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-project-info-reports-plugin</artifactId>
-        <version>@pom.version@</version>
+        <version>@project.version@</version>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
