--- a/src/it/MPIR-362/pom.xml
+++ b/src/it/MPIR-362/pom.xml
@@ -62,7 +62,7 @@
     <plugins>
       <plugin>
         <artifactId>maven-project-info-reports-plugin</artifactId>
-        <version>@pom.version@</version>
+        <version>@project.version@</version>
         <reportSets>
           <reportSet>
             <reports>
