--- a/src/it/full-pom/pom.xml
+++ b/src/it/full-pom/pom.xml
@@ -192,7 +192,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-project-info-reports-plugin</artifactId>
-        <version>@pom.version@</version>
+        <version>@project.version@</version>
         <configuration>
           <introduction>mail list intro text foo</introduction>
         </configuration>
