--- a/pom.xml
+++ b/pom.xml
@@ -138,7 +138,7 @@ under the License.
     <dependency>
       <groupId>org.apache.maven.reporting</groupId>
       <artifactId>maven-reporting-impl</artifactId>
-      <version>3.1.0-SNAPSHOT</version>
+      <version>3.0.0</version>
     </dependency>
 
     <!-- Maven -->
