--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@ under the License.
   </parent>
 
   <artifactId>maven-project-info-reports-plugin</artifactId>
-  <version>3.3.0</version>
+  <version>3.3.1-SNAPSHOT</version>
   <packaging>maven-plugin</packaging>
 
   <name>Apache Maven Project Info Reports Plugin</name>
@@ -100,7 +100,7 @@ under the License.
     <connection>scm:git:https://gitbox.apache.org/repos/asf/maven-project-info-reports-plugin.git</connection>
     <developerConnection>scm:git:https://gitbox.apache.org/repos/asf/maven-project-info-reports-plugin.git</developerConnection>
     <url>https://github.com/apache/maven-project-info-reports-plugin/tree/${project.scm.tag}</url>
-    <tag>maven-project-info-reports-plugin-3.3.0</tag>
+    <tag>HEAD</tag>
   </scm>
   <issueManagement>
     <system>JIRA</system>
@@ -127,7 +127,7 @@ under the License.
     <surefire.version>2.22.2</surefire.version>
     <javaVersion>8</javaVersion>
     <checkstyle.violation.ignore>ParameterNumber,MethodLength</checkstyle.violation.ignore>
-    <project.build.outputTimestamp>2022-04-23T10:29:24Z</project.build.outputTimestamp>
+    <project.build.outputTimestamp>2022-04-23T10:30:05Z</project.build.outputTimestamp>
   </properties>
 
   <dependencies>
