--- a/src/it/MPIR-242/pom.xml
+++ b/src/it/MPIR-242/pom.xml
@@ -32,6 +32,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <artifacts.url>http://maven.apache.org/plugins/it/${project.artifactId}</artifacts.url>
+    <fluidoSkinVersion>@fluidoSkinVersion@</fluidoSkinVersion>
   </properties>
 
   <url>${artifacts.url}</url>
