--- a/src/it/MPIR-362/pom.xml
+++ b/src/it/MPIR-362/pom.xml
@@ -34,6 +34,7 @@
     <maven.compiler.target>1.7</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    <fluidoSkinVersion>@fluidoSkinVersion@</fluidoSkinVersion>
   </properties>
 
   <dependencyManagement>
